--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,5 @@
-.App {
-  text-align: center;
-  .btn {
-    color: #333;
-  }
+.logo {
+  height: 32px;
+  background: #ffffff33;
+  margin: 16px;
 }
-
